--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for Android cryptocurrency exchange application.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "PORT=3825 node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
