--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "PORT=3825 node index.js",
-    "test": "mocha --timeout 10000"
+    "test": "mocha ./test/* --timeout 10000"
   },
   "repository": {
     "type": "git",
