--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "express": "^4.16.2",
+    "fcm-node": "^1.2.1",
     "hashmap": "^2.3.0",
     "mongoose": "^5.0.11",
     "mysql": "^2.15.0",
